🔧 Ajout du .gitignore et suppression des fichiers non trackés

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ __pycache__/
 # ✅ Fichiers d'environnement et archives
 *.zip
 .env
+venv/
 
 # ✅ Fichiers d'éditeur (non pertinents pour le code)
 .vscode/
